# OpenGLES3_NDK

./: .gitignore  .gitmodules  README.md
OpenGLESCommon/common/: KitCommon.h  KitImage.h  MyImageInfo.h  NativeImageUtils.h  common.h
OpenGLESCommon/glrender/libassimp/assimp/: config.h
OpenGLESCommon/glrender/libassimp/lib/arm64-v8a/: readme.txt
OpenGLESCommon/libpng/inc/: png.h
OpenGLESCommon/utils/: KitCommonDefine.h  KitFileUtils.h  KitImageUtils.h  KitLogUtils.h  LogAndroid.h  MyDefineUtils.h  MyFileHelper.h  NativeImageUtils.h  OpenImageHelper.h  Utils.h
OpenGLESEGLSample/: .gitignore  settings.gradle
OpenGLESEGLSample/app/: build.gradle
OpenGLESEGLSample/app/src/androidTest/java/com/example/opengleseglsample/: ExampleInstrumentedTest.java
OpenGLESEGLSample/app/src/main/: AndroidManifest.xml
OpenGLESEGLSample/app/src/main/cpp/: CMakeLists.txt  DrawHelper.h  EGLHelper.cpp  EGLHelper.h  native-egl-jni.cpp  native-jni.cpp  native-jni.h  native-lib.cpp
OpenGLESEGLSample/app/src/main/cpp/audio/: AAduioWaveMaker.cpp  AAduioWaveMaker.h  AAudioBufferQueue.h  AAudioHelper.cpp  AAudioHelper.h  AAudioWaveMaker.cpp  AAudioWaveMaker.h  NativeAudioHelper.cpp  NativeAudioHelper.h  OboeHelper.cpp  OboeHelper.h  OpenSLESHelper.cpp  OpenSLESHelper.h
OpenGLESEGLSample/app/src/main/cpp/media/: MediaCodecHelper.cpp  MediaCodecHelper.h
OpenGLESEGLSample/app/src/main/cpp/shader_helper/: ShaderHelper.cpp
OpenGLESEGLSample/app/src/main/cpp/util/: CommonUtils.h  FileUtils.h
OpenGLESEGLSample/app/src/main/java/com/example/gles/: GLUtil.java  Texture2dProgram.java
OpenGLESEGLSample/app/src/main/java/com/example/media/: MediaCodecHelper.java
OpenGLESEGLSample/app/src/main/java/com/example/opengleseglsample/: AAudioActivity.java  AAudioMakerActivity.java  GLProcessorActivity.java  GLRecordFboActivity.java  HomeActivity.java  MainActivity.java  NativeEGLHelper.java  OboeActivity.java  OpenSLESActivity.java  SimpleGLSurfaceView.java
OpenGLESEGLSample/app/src/main/java/com/example/permission/: PermissionHelper.java  PermissionInterface.java
OpenGLESEGLSample/app/src/main/java/com/example/utils/: DebugLog.java  MyLog.java
OpenGLESEGLSample/app/src/main/res/layout/: activity_aaudio.xml  activity_audiomaker.xml  activity_gl_processor.xml  activity_home.xml  activity_main.xml  activity_oboe.xml  activity_opensles.xml  activity_recording.xml
OpenGLESEGLSample/app/src/main/res/values/: strings.xml
OpenGLESEGLSample/app/src/test/java/com/example/opengleseglsample/: ExampleUnitTest.java
OpenGLESEGLSample/gradle/wrapper/: gradle-wrapper.properties
OpenGLESSamples/: .gitignore  settings.gradle
OpenGLESSamples/app/: build.gradle
OpenGLESSamples/app/src/androidTest/java/com/cgwang1580/openglessamples/: ExampleInstrumentedTest.java
OpenGLESSamples/app/src/main/: AndroidManifest.xml
OpenGLESSamples/app/src/main/cpp/: CMakeLists.txt  native.cpp  opengles-sample-jni.cpp  opengles-sample-jni.h
OpenGLESSamples/app/src/main/cpp/draw/: AHardwareBufferHelper.cpp  AHardwareBufferHelper.h  DrawHelper.h  SampleBase.cpp  SampleBase.h  SampleDrawFBO.cpp  SampleDrawFBO.h  SampleDrawYUV.cpp  SampleDrawYUV.h  SampleFactory.h  SampleRender3D.cpp  SampleRender3D.h  SampleRender3DMesh.cpp  SampleRender3DMesh.h  SampleTexture.cpp  SampleTexture.h  SampleTransform.cpp  SampleTransform.h  draw_utils.cpp  draw_utils.h
OpenGLESSamples/app/src/main/cpp/glutil/: DrawHelper.h  ScreenRect.cpp  ScreenRect.h
OpenGLESSamples/app/src/main/cpp/header_out/: processor.h
OpenGLESSamples/app/src/main/cpp/jni/: Application.mk  CMakeLists.txt  config.cmake  opengles-sample-jni.cpp  opengles-sample-jni.h
OpenGLESSamples/app/src/main/cpp/jni/freetype/: Android.mk  CMakeLists.txt
OpenGLESSamples/app/src/main/cpp/jni/glutil/: DrawHelper.h  ScreenRect.cpp  ScreenRect.h
OpenGLESSamples/app/src/main/cpp/jni/header_out/: processor.h
OpenGLESSamples/app/src/main/cpp/jni/model/: Mesh.h  Model.h
OpenGLESSamples/app/src/main/cpp/jni/render3d/: BarHelper.h
OpenGLESSamples/app/src/main/cpp/jni/sample/: AHardwareBufferHelper.cpp  AHardwareBufferHelper.h  CMakeLists.txt  SampleBase.cpp  SampleBase.h  SampleDrawFBO.cpp  SampleDrawFBO.h  SampleDrawYUV.cpp  SampleDrawYUV.h  SampleFactory.h  SampleRender16Bit.cpp  SampleRender16Bit.h  SampleRender3D.cpp  SampleRender3D.h  SampleRender3DMesh.cpp  SampleRender3DMesh.h  SampleText.h  SampleTextRender.cpp  SampleTextRender.h  SampleTexture.cpp  SampleTexture.h  SampleTransform.cpp  SampleTransform.h  draw_utils.cpp  draw_utils.h
OpenGLESSamples/app/src/main/cpp/jni/shader/: shader_content.h
OpenGLESSamples/app/src/main/cpp/jni/shader_helper/: ShaderHelper.cpp  ShaderHelper.h
OpenGLESSamples/app/src/main/cpp/jni/source/: JniUtils.h  MotionState.h  config.h  processor.cpp  processor_inner.h
OpenGLESSamples/app/src/main/cpp/model/: Mesh.h  Model.h
OpenGLESSamples/app/src/main/cpp/render3d/: barHelper.h
OpenGLESSamples/app/src/main/cpp/shader/: shader.txt  shader_content.h
OpenGLESSamples/app/src/main/cpp/shader_helper/: ShaderHelper.cpp  ShaderHelper.h
OpenGLESSamples/app/src/main/cpp/source/: JniUtils.h  MotionState.h  processor.cpp  processor_inner.h
OpenGLESSamples/app/src/main/java/com/cgwang1580/glview/: MyGLSurfaceView.java  NativeFunctionHelper.java  RecordGLSurfaceView.java
OpenGLESSamples/app/src/main/java/com/cgwang1580/multimotionhelper/: MotionStateGL.java  MultiMotionEventHelper.java
OpenGLESSamples/app/src/main/java/com/cgwang1580/openglessamples/: GLViewActivity.java  HomeActivity.java  MainActivity.java  MyGLRenderer.java  MyGLSurfaceView.java  MyLog.java  NativeFunctionHelper.java  NativeFunctionSet.java  RecordGLSurfaceView.java  RecordingActivity.java
OpenGLESSamples/app/src/main/java/com/cgwang1580/permission/: PermissionHelper.java  (+1 more)
OpenGLESSamples/app/src/main/res/layout/: activity_gl_view.xml  activity_home.xml  activity_main.xml  activity_recording.xml
OpenGLESSamples/app/src/main/res/values/: colors.xml  effect_arrays.xml  strings.xml  styles.xml
OpenGLESSamples/gradle/wrapper/: gradle-wrapper.properties
(+20 files in other folders)
